// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalAdminStepSelector /> render correctly 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="row"
  listItem={false}
  style={
    Object {
      "marginLeft": 0,
      "marginRight": 0,
      "padding": "10px 0",
    }
  }
>
  <Col
    bsClass="col"
    componentClass="div"
    xs={10}
  >
    <strong>
      stepTitle
    </strong>
    <div>
      Etape de sélection
    </div>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={2}
  >
    <div
      className="pull-right"
    >
      <Toggle
        checked={true}
        disabled={false}
        icons={
          Object {
            "checked": <Component />,
            "unchecked": <Component />,
          }
        }
        onChange={[Function]}
      />
    </div>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={12}
  >
    <Well
      bsClass="well"
      className="row"
      style={
        Object {
          "margin": "10px 0",
        }
      }
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={1}
        style={
          Object {
            "lineHeight": "34px",
            "marginTop": 6,
          }
        }
        xs={12}
      >
        <strong>
          Statut
        </strong>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={3}
        style={
          Object {
            "marginTop": 6,
          }
        }
        xs={12}
      >
        <FormControl
          bsClass="form-control"
          className="status-selector"
          componentClass="select"
          onChange={[Function]}
          style={
            Object {
              "marginBottom": 0,
            }
          }
          value={-1}
        >
          <option
            value={-1}
          >
            Aucun statut
          </option>
        </FormControl>
      </Col>
    </Well>
  </Col>
</ListGroupItem>
`;

exports[`<ProposalAdminStepSelector /> render correctly when edited 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="row"
  listItem={false}
  style={
    Object {
      "marginLeft": 0,
      "marginRight": 0,
      "padding": "10px 0",
    }
  }
>
  <Col
    bsClass="col"
    componentClass="div"
    xs={10}
  >
    <strong>
      stepTitle
    </strong>
    <div>
      Etape de sélection
    </div>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={2}
  >
    <div
      className="pull-right"
    >
      <Toggle
        checked={true}
        disabled={false}
        icons={
          Object {
            "checked": <Component />,
            "unchecked": <Component />,
          }
        }
        onChange={[Function]}
      />
    </div>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={12}
  >
    <Well
      bsClass="well"
      className="row"
      style={
        Object {
          "margin": "10px 0",
        }
      }
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={1}
        style={
          Object {
            "lineHeight": "34px",
            "marginTop": 6,
          }
        }
        xs={12}
      >
        <strong>
          Statut
        </strong>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={3}
        style={
          Object {
            "marginTop": 6,
          }
        }
        xs={12}
      >
        <FormControl
          bsClass="form-control"
          className="status-selector"
          componentClass="select"
          onChange={[Function]}
          style={
            Object {
              "marginBottom": 0,
            }
          }
          value={-1}
        >
          <option
            value={-1}
          >
            Aucun statut
          </option>
        </FormControl>
      </Col>
    </Well>
  </Col>
</ListGroupItem>
`;

exports[`<ProposalAdminStepSelector /> render correctly when edited and notified 1`] = `
<ListGroupItem
  bsClass="list-group-item"
  className="row"
  listItem={false}
  style={
    Object {
      "marginLeft": 0,
      "marginRight": 0,
      "padding": "10px 0",
    }
  }
>
  <Col
    bsClass="col"
    componentClass="div"
    xs={10}
  >
    <strong>
      stepTitle
    </strong>
    <div>
      Etape de sélection
    </div>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={2}
  >
    <div
      className="pull-right"
    >
      <Toggle
        checked={true}
        disabled={false}
        icons={
          Object {
            "checked": <Component />,
            "unchecked": <Component />,
          }
        }
        onChange={[Function]}
      />
    </div>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    xs={12}
  >
    <Well
      bsClass="well"
      className="row"
      style={
        Object {
          "margin": "10px 0",
        }
      }
    >
      <Col
        bsClass="col"
        componentClass="div"
        md={1}
        style={
          Object {
            "lineHeight": "34px",
            "marginTop": 6,
          }
        }
        xs={12}
      >
        <strong>
          Statut
        </strong>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        md={3}
        style={
          Object {
            "marginTop": 6,
          }
        }
        xs={12}
      >
        <FormControl
          bsClass="form-control"
          className="status-selector"
          componentClass="select"
          onChange={[Function]}
          style={
            Object {
              "marginBottom": 0,
            }
          }
          value={-1}
        >
          <option
            value={-1}
          >
            Aucun statut
          </option>
        </FormControl>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={8}
      >
        <div
          className="pull-right"
          style={
            Object {
              "color": "#08af0d",
              "fontSize": 16,
            }
          }
        >
          <i
            className="fa fa-check-circle-o"
          />
           
          L'email a bien été envoyé.
        </div>
      </Col>
    </Well>
  </Col>
</ListGroupItem>
`;
